@@ -137,15 +137,17 @@
   With \code{DUP = FALSE}, character vectors cannot be used, and single
   precision values will not be returned.
 
-  It is safe to set \code{DUP = FALSE} if you do not change any of the
-  variables that might be affected, e.g.,
+  It is safe to set \code{DUP = FALSE} provided you do not change any of
+  the variables that might be affected, e.g.,
 
   \code{.C("Cfunction", input = x, output = numeric(10))}.
 
   In this case the \code{output} variable did not exist before the call
-  so it cannot cause trouble (but as from \R 2.15.1 it is not copied
-  even with \code{DUP = TRUE}).  If the \code{input} variable is not
-  changed in the C code of \code{Cfunction} you are safe.
+  so is not copied (even with \code{DUP = TRUE}).  \emph{If} the
+  \code{input} variable is not changed in the C code of \code{Cfunction}
+  you would be safe.  Unfortunately, there is no automated check that
+  the C function does not change its argument, and authors have
+  frequently done so without realizing it.
 
   However, in recent versions of \R most unnecessary copying is avoided:
   on the other hand using \code{DUP = FALSE} can omit \emph{necessary}
